--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="uk.co.kring.android.dcs">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -9,20 +11,41 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".DCSListActivity">
+        <activity android:name=".DCSListActivity"
+                  android:label="@string/dcs_list_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".DCSActivity"
+                  android:label="@string/dcs_activity"
                   android:parentActivityName=".DCSListActivity">
         </activity>
         <activity android:name=".MessageListActivity"
+                  android:label="@string/message_list_activity"
                   android:parentActivityName=".DCSListActivity">
         </activity>
         <activity android:name=".MessageActivity"
+                  android:label="@string/message_activity"
                   android:parentActivityName=".MessageListActivity">
+        </activity>
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key"/>
+
+        <activity
+                android:name=".maps.MapsActivity"
+                android:label="@string/maps_activity"
+                android:parentActivityName=".MessageActivity">
         </activity>
         <service
                 android:name=".MyService"
