--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.5"
     annotationProcessor "androidx.room:room-compiler:2.2.5"
     testImplementation "androidx.room:room-testing:2.2.5"
+    implementation 'androidx.webkit:webkit:1.2.0'
 }
