--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "uk.co.kring.android.dcs"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -41,4 +42,5 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.2.5"
     testImplementation "androidx.room:room-testing:2.2.5"
     implementation 'androidx.webkit:webkit:1.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 }
