--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.core:core:1.3.0-rc01'
+    implementation 'androidx.core:core:1.4.0-alpha01'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation "androidx.room:room-runtime:2.2.5"
     annotationProcessor "androidx.room:room-compiler:2.2.5"
     testImplementation "androidx.room:room-testing:2.2.5"
     implementation 'androidx.webkit:webkit:1.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
+    implementation 'com.google.firebase:firebase-messaging:20.2.0'
 }
