--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,13 @@
                 <action android:name=".MyService.ACTION_START"/>
             </intent-filter>
         </service>
+        <service
+                android:name=".MyFBMessageService"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
