--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     testImplementation "androidx.room:room-testing:2.2.5"
     implementation 'androidx.webkit:webkit:1.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
+    implementation 'com.google.firebase:firebase-config:19.1.4'
     implementation 'com.google.firebase:firebase-messaging:20.2.0'
 }
