--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         </activity>
         <activity
                 android:name=".SurfaceActivity"
+                android:screenOrientation="landscape"
+                android:configChanges="orientation|keyboardHidden"
                 android:label="@string/surface_activity"
                 android:parentActivityName=".DCSListActivity">
         </activity>
